@startuml
class BuildingUIController{
    +OnDemolishClick()
    +OnClose()
    
}

class BuilderGridController{
    +IsOpened:bool
    +Open()
    +Close()
}

class BuilderCell{
    -isHovered: bool
    -isForbidden: bool
    +OnClick()
    +OnHover()
    +SetForbiddenState(forbidden:bool)
}

BuilderGridController "1\n-controller" *-- "*\n-cells" BuilderCell

BuildingUIController  o-- "1\n-grid" BuilderGridController

@enduml